--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title>David Schmidt</title>
+    <meta name="description" content="Personal page for David Schmidt.">
+    <meta name="author" content="David Schmidt">
+    <meta name="robots" content="index, follow">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <img src="img/me.jpg" alt="Profile picture" id="profile-pic">
+            <h1>David Schmidt</h1>
+            <h2>Dualer Student, Angewandte Informatik</h2>
+        </div>
+        <hr>
+        <div class="social-media-row">
+            <a href="https://www.instagram.com/davodd_/"><img src="img/instagram.svg" alt="Instagram profile"></a>  
+            <a href="https://github.com/DavidSchmidt00"><img src="img/github.svg" alt="GitHub profile"></a>  
+            <a href="https://twitter.com/DavoDD_"><img src="img/twitter.svg" alt="Twitter profile"></a>  
+            <a href="https://www.linkedin.com/in/david-schmidt00/"><img src="img/linkedin.svg" alt="Linkedin Profile"></a>  
+            <a href="https://www.xing.com/profile/David_Schmidt365/cv"><img src="img/xing.svg" alt="Xing Profile"></a>  
+        </div>
+    </div>
+</body>
+
+</html>
