added rotating border

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="img/me.jpg" alt="Profile picture" id="profile-pic">
+            <div class="image-container">
+                <div class="image-border"></div>
+                <img src="img/me.jpg" alt="David Schmidt" id="profile-pic">
+            </div>
+            
+            
             <h1>David Schmidt</h1>
             <h2>Dualer Student, Angewandte Informatik</h2>
         </div>
