--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="David Schmidt">
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <div class="container">
+    <div class="profile-container">
         <div class="header">
             <div class="image-container">
                 <div class="image-border"></div>
@@ -42,6 +42,10 @@
             <a href="https://twitter.com/DavoDD_"><img src="img/twitter.svg" alt="Twitter profile"></a>  
         </div>
     </div>
+    
+    <footer>
+        <a href="impressum.html">Impressum</a>
+    </footer>
 </body>
 
 </html>
