added plausible.io tracking

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
+    <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
     <div class="profile-container">
