--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -23,7 +24,7 @@
         <div class="header">
             <div class="image-container">
                 <div class="image-border"></div>
-                <img src="img/me.jpg" alt="David Schmidt" id="profile-pic">
+                <img src="img/me.webp" alt="David Schmidt" id="profile-pic">
             </div>
             
             
