changed meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>David Schmidt</title>
-    <meta name="description" content="Personal page for David Schmidt.">
+    <meta name="description" content="Hier findest du Informationen über David Schmidt">
     <meta name="author" content="David Schmidt">
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
