added about-me view

--- a/impressum.html
+++ b/impressum.html
@@ -35,6 +35,9 @@
 
         <p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
     </div>
+    <footer>
+        <a href="index.html">Zurück zur Haupseite</a>
+    </footer>
 </body>
 
 </html>
