--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
+
 </head>
 <body>
     <div class="landing-view">
@@ -49,9 +52,10 @@
     <a class="scroll-down-link" href="#details"><img src="img/arrow.svg"></a>
 
     <div class="detail-view" id="details">
-        <h2>Über mich</h2>
-        <p>Hey, mein Name ist David Schmidt, ich bin 20 Jahre alt und komme aus einem kleinen Ort in der Nähe von Limburg.</p>
-        <p>Aktuell studiere ich dual Angewandte Informatik an der <a href="https://www.dhbw-mannheim.de">DHBW Mannheim</a> und arbeite bei der <a href="https://www.dbsystel.de">DB Systel GmbH</a> in Frankfurt.</p>
+        <p id="about-me"><h2>Über mich</h2>
+            <p>Hey, mein Name ist David Schmidt, ich bin 20 Jahre alt und komme aus einem kleinen Ort in der Nähe von Limburg.</p>
+            <p>Aktuell studiere ich dual Angewandte Informatik an der <a href="https://www.dhbw-mannheim.de">DHBW Mannheim</a> und arbeite bei der <a href="https://www.dbsystel.de">DB Systel GmbH</a> in Frankfurt.</p>
+        </p>
     </div>
 
 
