added custom vh variable

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <div class="landing-view">
