--- a/impressum.html
+++ b/impressum.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>David Schmidt - Impressum</title>
-    <meta name="description" content="Personal page for David Schmidt.">
+    <meta name="description" content="Hey ich bin David Schmidt und studiere akutell Angewandte Informatik bei der DB Systel GmbH.">
     <meta name="author" content="David Schmidt">
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
@@ -17,6 +17,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
+    <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
     <div class="content">
