--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="David Schmidt">
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
@@ -18,7 +18,6 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
-    <script src="index.js"></script>
 </head>
 <body>
     <div class="content">
