added db and dhbw icons

--- a/index.html
+++ b/index.html
@@ -45,13 +45,19 @@
                     <a href="https://twitter.com/DavoDD_"><img src="img/twitter.svg" alt="Twitter profile"></a>  
                 </div>
             </div>
-            <a class="scroll-down-link" href="#details"><img src="img/arrow.svg"></a>
+            <a class="scroll-down-link" href="#details"><img src="img/arrow.svg" alt="Scroll down arrow"></a>
         </div>
 
         <div class="detail-view" id="details">
             <p id="about-me"><h2>Über mich</h2>
-                <p>Hey, mein Name ist David Schmidt, ich bin 20 Jahre alt und komme aus einem kleinen Ort in der Nähe von Limburg.</p>
-                <p>Aktuell studiere ich dual Angewandte Informatik an der <a href="https://www.dhbw-mannheim.de">DHBW Mannheim</a> und arbeite bei der <a href="https://www.dbsystel.de">DB Systel GmbH</a> in Frankfurt.</p>
+                <p>Hey, mein Name ist <strong>David Schmidt</strong>, ich bin 20 Jahre alt und komme aus einem kleinen Ort in der Nähe von Limburg.</p>
+                
+                
+                <p>Aktuell studiere ich dual <strong>Angewandte Informatik</strong> an der DHBW Mannheim und arbeite bei der DB Systel GmbH in Frankfurt.</p>
+                <div class="double-img">
+                    <a href="https://www.dbsystel.de"><img src="img/db-systel.png" alt="DB Systel Logo"></a>
+                    <a href="https://www.dhbw-mannheim.de"><img src="img/dhbw.png" alt="DHBW Logo"></a>
+                </div>
             </p>
         </div>
 
