fix for landscape orientation

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
+    <div id="turn">
+        Bitte halte dein Gerät horizontal!
+    </div>
+
     <div class="content">
         <div class="landing-view">
             <div class="profile-container">
