--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
-    <!--<div id="turn">
+    <div id="turn">
         Bitte halte dein Gerät horizontal!
-    </div> -->
+    </div>
 
     <div class="content">
         <div class="landing-view">
