added rel noopener

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="text-with-image">
                     <p>Im Zuge des <strong>#WirVsVirus</strong> Hackathons der Bundesregierung startete ich zusammen mit Kommolitonen das Projekt HappyHamster. </br>
                         Wir entwickelten innerhalb von 48 Stunden den Prototypen einer Plattform für Auslastungsdaten von Orten wie z.B. Supermärkten. </br>
-                        Über uns ist auch ein Artikel auf <a target="_blank" href="https://www.stern.de/wirtschaft/news/coronavirus-gefahr---happy-hamster--warnt-vor-vollen-supermaerkten-9207340.html">stern.de</a> erschienen.
+                        Über uns ist auch ein Artikel auf <a target="_blank" href="https://www.stern.de/wirtschaft/news/coronavirus-gefahr---happy-hamster--warnt-vor-vollen-supermaerkten-9207340.html" rel="noopener">stern.de</a> erschienen.
                     </p>            
                     <a href="https://github.com/Happy-Hamster" target="_blank" rel="noopener"><img src="img/happyhamster.png" alt="HappyHamster Logo"></a>
                 </div>
