--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <p>Aktuell studiere ich dual <strong>Angewandte Informatik</strong> an der DHBW Mannheim und arbeite bei der DB Systel GmbH in Frankfurt.</p>
                 </div>
                     <div class="double-img">
-                    <a href="https://www.dbsystel.de" target="_blank" rel="noopener"><img src="img/db-systel.png" alt="DB Systel Logo"></a>
-                    <a href="https://www.dhbw-mannheim.de" target="_blank" rel="noopener"><img src="img/dhbw.png" alt="DHBW Logo"></a>
+                    <a href="https://www.dbsystel.de" target="_blank" rel="noopener"><img src="img/db-systel.webp" alt="DB Systel Logo"></a>
+                    <a href="https://www.dhbw-mannheim.de" target="_blank" rel="noopener"><img src="img/dhbw.webp" alt="DHBW Logo"></a>
                 </div>
                 <div class="double-text">
                     <p>In meiner Freizeit treibe ich Sport und mache Musik. Ich singe und spiele Gitarre, Schlagzeug und Klavier.</p>
@@ -77,12 +77,12 @@
                         Wir entwickelten innerhalb von 48 Stunden den Prototypen einer Plattform für Auslastungsdaten von Orten wie z.B. Supermärkten. </br>
                         Über uns ist auch ein Artikel auf <a target="_blank" href="https://www.stern.de/wirtschaft/news/coronavirus-gefahr---happy-hamster--warnt-vor-vollen-supermaerkten-9207340.html" rel="noopener">stern.de</a> erschienen.
                     </p>            
-                    <a href="https://github.com/Happy-Hamster" target="_blank" rel="noopener"><img src="img/happyhamster.png" alt="HappyHamster Logo"></a>
+                    <a href="https://github.com/Happy-Hamster" target="_blank" rel="noopener"><img src="img/happyhamster.webp" alt="HappyHamster Logo"></a>
                 </div>
 
                 <div class="text-with-image">
                     <p>Aktuell arbeite ich mit Kommolitonen an einer webbasierten Arbeitsstundenverwaltung für Vereine.</p>            
-                    <a href="https://github.com/clubwork" target="_blank" rel="noopener"><img src="img/clubwork.png" alt="Clubwork Logo"></a>
+                    <a href="https://github.com/clubwork" target="_blank" rel="noopener"><img src="img/clubwork.webp" alt="Clubwork Logo"></a>
                 </div>
             
                 
