--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div id="turn">
-        Bitte halte dein Gerät horizontal!
+        Bitte halte dein Gerät vertikal!
     </div>
 
     <div class="content">
@@ -73,7 +73,7 @@
             <div>
                 <h2>Meine Projekte</h2>
                 <div class="text-with-image">
-                    <p>Im Zuge des <strong>#WirVsVirus</strong> Hackathons der Bundesregierung startete ich zusammen mit Kommolitonen das Projekt HappyHamster. </br>
+                    <p>Im Zuge des <strong>#WirVsVirus</strong> Hackathons der Bundesregierung startete ich zusammen mit Kommilitonen das Projekt HappyHamster. </br>
                         Wir entwickelten innerhalb von 48 Stunden den Prototypen einer Plattform für Auslastungsdaten von Orten wie z.B. Supermärkten. </br>
                         Über uns ist auch ein Artikel auf <a target="_blank" href="https://www.stern.de/wirtschaft/news/coronavirus-gefahr---happy-hamster--warnt-vor-vollen-supermaerkten-9207340.html" rel="noopener">stern.de</a> erschienen.
                     </p>            
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="text-with-image">
-                    <p>Aktuell arbeite ich mit Kommolitonen an einer webbasierten Arbeitsstundenverwaltung für Vereine.</p>            
+                    <p>Aktuell arbeite ich mit Kommilitonen an einer webbasierten Arbeitsstundenverwaltung für Vereine.</p>            
                     <a href="https://github.com/clubwork" target="_blank" rel="noopener"><img src="img/clubwork.webp" alt="Clubwork Logo"></a>
                 </div>
             
