font fix + seo optimierung

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
-    <title>David Schmidt</title>
-    <meta name="description" content="Hey ich bin David Schmidt und studiere akutell Angewandte Informatik bei der DB Systel GmbH.">
+    <title>David Schmidt - Informatik Student</title>
+    <meta name="description" content="Hey, mein Name ist David Schmidt, ich bin 20 Jahre alt und studiere dual Angewandte Informatik.">
     <meta name="author" content="David Schmidt">
     <meta name="robots" content="index, follow">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
