--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="double-text">
                     <p>In meiner Freizeit treibe ich Sport und mache Musik. Ich singe und spiele Gitarre, Schlagzeug und Klavier.</p>
-                    <p>Da IT meine Leidenschaft ist, entwickle ich außerhalb von Hochschule und Arbeit an persönlichen Projekten</p>
+                    <p>Da IT meine Leidenschaft ist, entwickle ich außerhalb von Hochschule und Arbeit an persönlichen Projekten.</p>
                 </div>
             </div>
             <a class="scroll-down-link" href="#projects"><img src="img/arrow.svg" alt="Scroll down arrow"></a>
