--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon-48x48.ico">
+    <meta name="thumbnail" content="img/me.webp"/>
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#ffffff">
+    
     <script async defer data-domain="davidschmidt.info" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
